<resources>
    <string name="app_name">ft_hangouts</string>

    <!-- titles -->
    <string name="phone_number_title">Phone number*</string>
    <string name="first_name_title">First name*</string>
    <string name="last_name_title">Last name</string>
    <string name="gender_title">Gender</string>
    <string name="comment_title">Comment</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="other_gender">Other</string>
    <string name="unknown_gender">Unknown</string>
    <string name="black_color">Black</string>
    <string name="blue_color">Blue</string>
    <string name="pink_color">Pink</string>
    <string name="purple_color">Purple</string>

    <!-- Buttons -->
    <string name="save_btn_text">Save</string>
    <string name="delete_btn_text">Delete</string>
    <string name="add_contact_btn_description">Add contact</string>

    <!-- errors -->
    <string name="contact_create_db_error">Error: Can\'t create contact</string>

    <!-- user warnings -->
    <string name="field_required">Field required</string>
    <string name="cant_load_contacts_list">Can\'t load list of contacts</string>
    <string name="phone_number_already_exists">Contact with this phone number already exists</string>
    <string name="cant_open_contact_not_found">Can\'t open. Contact not found</string>
    <string name="set_background_date_time">App was set in background at</string>
    <string name="value_too_long">Max length = </string>
    <string name="sms_error">Can\'t send sms: </string>
    <string name="unsaved_changes">Save changes first!</string>

    <!-- dialogs -->
    <string name="delete_contact_dialog">Do you want to delete this contact?</string>
    <string name="delete_contact_dialog_positive_btn">Yes</string>
    <string name="delete_contact_dialog_negative_btn">No</string>

    <!-- hints -->
    <string name="msg_hint">Type your message here</string>
</resources>