<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <EditText
        android:id="@+id/editTxtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="205dp" />


    <EditText
        android:id="@+id/editTxtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="285dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="359dp">

        <RadioButton
            android:id="@+id/radioBtnMaleGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_gender" />

        <RadioButton
            android:id="@+id/radioBtnFemaleGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_gender" />

        <RadioButton
            android:id="@+id/radioBtnOtherGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_gender" />

        <RadioButton
            android:id="@+id/radioBtnUnknownGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/unknown_gender" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTxtComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="520dp" />

</androidx.constraintlayout.widget.ConstraintLayout>